--- a/MyAirport.Client/MyAirport.Client/MyAirport.Client.csproj
+++ b/MyAirport.Client/MyAirport.Client/MyAirport.Client.csproj
@@ -52,6 +52,12 @@
     <Compile Include="BagageForm.Designer.cs">
       <DependentUpon>BagageForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="DetailBagageForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DetailBagageForm.Designer.cs">
+      <DependentUpon>DetailBagageForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ParameterForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +86,9 @@
     <EmbeddedResource Include="BagageForm.resx">
       <DependentUpon>BagageForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="DetailBagageForm.resx">
+      <DependentUpon>DetailBagageForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ParameterForm.resx">
       <DependentUpon>ParameterForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -97,6 +106,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -153,6 +163,9 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\image_lien.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
