--- a/MyAirport.Client/MyAirport.Client/MyAirport.Client.csproj
+++ b/MyAirport.Client/MyAirport.Client/MyAirport.Client.csproj
@@ -120,6 +120,9 @@
     <None Include="Service References\ServiceReference1\Arrays.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Service References\ServiceReference1\MyAirport.Client.ServiceReference1.BagageCriteres.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Service References\ServiceReference1\MyAirport.Client.ServiceReference1.BagageDefinition.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
